(web) Finished joypads, added audio (buggy on mobile) and added a nice readme

--- a/web/index.scss
+++ b/web/index.scss
@@ -10,36 +10,34 @@ $color-3: rgba(255, 255, 255, 0.74);html{overflow-x: hidden;}
     position: relative;
 }
 
-body {
+html, body {
     background-color: $color-1;
     height: 100%;
 }
 
 .nes {
     width: 100%;
-    height: 100vh;
-    background-color: $color-1;
+    height: 100%;
     color: white;
     font-family: "Poppins";
     display: grid;
     place-content: center;
-
-    // transform-origin: right;
-    // transform: translate(-100vw, 0) rotate(180deg);
-    // writing-mode: vertical-rl;
+    touch-action: manipulation;
     
     #nes-canvas {
         transform: scale(1.5);
         image-rendering: pixelated;
     }
 
-    input {
+    .nes-rom-file {
+        all: unset;
         position: absolute;
+        z-index: 1;
     }
 
     .nes-joypad {
-
-        background: none;
+        width: 100%;
+        height: 100%;
         position: absolute;
 
         * {
@@ -51,35 +49,65 @@ body {
         }
 
         .nes-joypad-left {
-            position: relative;
-            background: red;
+            position: absolute;
+            height: 8em;
+            width: 8em;
+            left: 0em;
+            bottom: 0em;
+            display: grid;
+            place-content: center;
+
+            button {
+                position: relative;
+                border-radius: 50%;
+                grid-column: 1;
+                grid-row: 1;
+                height: 4em;
+                width: 4em;
+            }
+
+            #up {
+                transform: translate(0em, -2.8em);
+            }
+
+            #down {
+                transform: translate(0em, 2.8em);
+            }
+
+            #left {
+                transform: translate(-2.8em, 0em);
+            }
+
+            #right {
+                transform: translate(2.8em, 0em);
+            }
+        }
+    
+        .nes-joypad-right-up {
+            position: absolute;
+            right: 1em;
+            bottom: 3em;
 
             button {
                 border-radius: 50%;
                 height: 2em;
                 width: 2em;
-            }
-        }
-    
-        .nes-joypad-right-up {
-            position: relative;
-            float: right;
-            background: green;
-
-            button {
-                border-radius: 50%;
-                height: 3em;
-                width: 3em;
+                margin: 0.1em;
+                font-size: 2em;
+                color: grey;
             }
         }
     
         .nes-joypad-right-down {
-            position: relative;
-            float: right;
-            background: blue;
+            position: absolute;
+            right: 1em;
+            bottom: 1em;
+
             button {
+                position: relative;
                 border-radius: 10%;
                 padding: 0.2em 0.5em;
+                margin: 0.1em;
             }
         }
     }
